[metadata]
name = ForeTiS
version = 0.0.1
description = Welcome to ForeTiS
long_description = file: README.md
license = MIT
author = Josef Eiglsperger, Florian Haselbeck; Dominik G. Grimm
author_email = josef.eiglsperger@tum.de
url = https://github.com/grimmlab/ForeTiS
project_urls =
    Documentation = https://ForeTiS.readthedocs.io/
    Source = https://github.com/grimmlab/ForeTiS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    torch==1.12.1
    pandas==1.5.0
    scikit-learn==1.1.2
    optuna==3.0.2
    statsmodels==0.13.2
    scipy==1.8.1
    pmdarima==2.0.1
    xgboost==1.6.2
    gpflow==2.5.2
    tensorflow==2.10.0
    tensorflow-probability==0.18
    joblib==1.2.0
    bayesian_torch
    blitz-bayesian-pytorch
    changefinder
    matplotlib

[options.packages.find]
exclude =
    docs*



    # URLs
    url='https://github.com/grimmlab/ForeTiS',
    project_urls={
        "Documentation": "https://ForeTiS.readthedocs.io/"
    },
    # build stuff
    packages=find_packages(),
    install_requires=["torch==1.12.1",
                      "pandas==1.5.0",
                      "scikit-learn==1.1.2",
                      "optuna==3.0.2",
                      "statsmodels==0.13.2",
                      "scipy==1.8.1",
                      "pmdarima==2.0.1",
                      "xgboost==1.6.2",
                      "gpflow==2.5.2",
                      "tensorflow==2.10.0",
                      "tensorflow-probability==0.18",
                      "joblib==1.2.0",
                      "bayesian_torch"
                      "blitz-bayesian-pytorch"
                      "changefinder"
                      "matplotlib"
                      ],

    # see https://pypi.org/classifiers/
    classifiers=[
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Bio-Informatics'
    ],
    python_requires=">=3.8"