[metadata]
name = ForeTiS
version = 0.0.7
description = state-of-the-art and easy-to-use time series forecasting
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Josef Eiglsperger, Florian Haselbeck; Dominik G. Grimm
author_email = josef.eiglsperger@tum.de
url = https://github.com/grimmlab/ForeTiS
project_urls =
    Documentation = https://ForeTiS.readthedocs.io/
    Source = https://github.com/grimmlab/ForeTiS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    torch>=1.11.0
    xgboost>=1.5.2
    optuna>=2.10.0
    sqlalchemy==1.4.46
    joblib>=1.1.0
    numpy>=1.22.2
    pandas>=1.4.1
    scikit-learn>=1.0.2
    tensorflow>=2.8.0
    tensorflow-probability>=0.18
    statsmodels>=0.13.2
    scipy>=1.8.1
    pmdarima>=2.0.1
    gpflow>=2.5.2
    matplotlib>=3.3.0
    changefinder>=0.3
    bayesian_torch
    blitz-bayesian-pytorch
    tables>=3.7.0

[options.package_data]
dataset_specific_config.ini = dataset_specific_config.ini

[options.packages.find]
exclude =
    docs*



    # URLs
    url='https://github.com/grimmlab/ForeTiS',
    project_urls={
        "Documentation": "https://ForeTiS.readthedocs.io/"
    },
    # build stuff
    packages=find_packages(),
    install_requires=["torch==1.11.0",
                      "xgboost==1.5.2",
                      "optuna==2.10.0",
                      "sqlalchemy==1.4.46",
                      "joblib==1.1.0",
                      "numpy==1.22.2",
                      "pandas==1.4.1",
                      "scikit-learn==1.0.2",
                      "tensorflow==2.8.0",
                      "tensorflow-probability==0.18",
                      "statsmodels==0.13.2",
                      "scipy==1.8.1",
                      "pmdarima==2.0.1",
                      "gpflow==2.5.2",
                      "matplotlib==3.3.0",
                      "changefinder==0.3",
                      "bayesian_torch",
                      "blitz-bayesian-pytorch",
                      "tables==3.7.0"
                      ],

    # see https://pypi.org/classifiers/
    classifiers=[
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Artificial Intelligence'
    ],
    python_requires=">=3.8"